footer gap responsive fixed ⊹ ࣪ ˖

--- a/css/desktop/home/footer.css
+++ b/css/desktop/home/footer.css
@@ -31,14 +31,15 @@ padding-bottom: 20px;
       width: 26%;
       height: 100%;
       justify-content: space-around;
-      align-items: end;
+      align-items: start;
       .social{
         width: 100%;
-        justify-content: space-between;
-        align-items: end;
+        justify-content: start;
+        gap: 15px;
+        align-items: center;
         .mediaLink{
-          width: 50px;
-          height: 50px;
+          width: 45px;
+          height: 45px;
           a{
 
             img{
